# XAI-Engine

./: CMakeLists.txt  README.md
src/: main.cpp
src/core/: aligned_alloc.cpp  aligned_alloc.h  config.h  kv_cache.cpp  kv_cache.h  simd_detect.h  simd_ops.cpp  simd_ops.h  thread_pool.cpp  thread_pool.h  types.h  vector_ops.cpp  vector_ops.h  webui.h
src/inference/: forward.cpp  forward.h  generator.cpp  generator.h  sampler.cpp  sampler.h
src/model/: model_loader.cpp  model_loader.h  rope.cpp  rope.h  tensor_ops.cpp  tensor_ops.h  tokenizer.cpp  tokenizer.h
